...
    <string name="family_back">Wróć</string>
    <string name="family_members">Członkowie gospodarstwa</string>
    <string name="family_owner">Właściciel</string>
    <string name="family_member">Członek</string>
    <string name="family_remove">Usuń z gospodarstwa</string>
    <string name="family_removing">Usuwanie…</string>
    <string name="family_remove_confirm_title">Usunąć członka?</string>
    <string name="family_remove_confirm_message">%1$s utraci dostęp do gospodarstwa.</string>
    <string name="family_remove_confirm">Usuń</string>
    <string name="family_invite_title">Zaproś osobę</string>
    <string name="family_invite_hint">Zaproszenie jest przypisane do adresu e-mail i wygasa po 7 dniach.</string>
    <string name="family_invite_email">Adres e-mail</string>
    <string name="family_create_invite">Utwórz i udostępnij zaproszenie</string>
    <string name="family_creating">Tworzenie…</string>
    <string name="family_invitations">Zaproszenia</string>
...
